@@ -362,15 +362,16 @@ CLEANFILES=$(ASSEMBLY)
 <xsl:for-each select="//dnpb:Solution[@name=$solutionName]/dnpb:Project[@name=$projectName]/dnpb:Configuration">
 <xsl:variable name="outputPath"><xsl:value-of select="dnpb:Options/dnpb:OutputPath/text()" /></xsl:variable>
 <xsl:variable name="keyFile"><xsl:value-of select="dnpb:Options/dnpb:KeyFile/text()" /></xsl:variable>
+<xsl:variable name="docFile"><xsl:value-of select="dnpb:Options/dnpb:XmlDocFile/text()" /></xsl:variable>
 <xsl:value-of select="$outputPath"/>/$(ASSEMBLY): $(RESOURCES) $(SOURCES) $(BINARY_LIBS) <xsl:call-template name="substring-after-last-mod"><xsl:with-param name="input" select="$keyFile" /><xsl:with-param name="substr" select="'/'" /></xsl:call-template>
-	mkdir -p <xsl:value-of select="$outputPath" /> <xsl:text disable-output-escaping="yes">&amp;&amp;</xsl:text> $(CSC) /out:$@ \
-		/target:<xsl:value-of select="$lcType" /> \
-		$(addprefix /resource:$(srcdir)/, $(RESOURCES)) \
-		$(addprefix /pkg:, $(PACKAGES)) \
-		$(addprefix /r:, $(SYSTEM_LIBS)) \
-		$(addprefix /r:$(srcdir)/, $(BINARY_LIBS)) \
-		$(REFERENCES) \
-		$(addprefix $(srcdir)/, $(SOURCES)) \<xsl:if test="$keyFile!=''">
+	<xsl:if test="$docFile!=''">mkdir -p doc <xsl:text disable-output-escaping="yes">&amp;&amp;</xsl:text> </xsl:if>mkdir -p <xsl:value-of select="$outputPath" /> <xsl:text disable-output-escaping="yes">&amp;&amp;</xsl:text> $(CSC) /out:$@ \
+		/target:<xsl:value-of select="$lcType" /> \<xsl:if test="$embeddedFiles!=''">
+		$(addprefix /resource:$(srcdir)/, $(RESOURCES)) \</xsl:if><xsl:if test="$pkgLibs!=''">
+		$(addprefix /pkg:, $(PACKAGES)) \</xsl:if><xsl:if test="$systemLibs!=''">
+		$(addprefix /r:, $(SYSTEM_LIBS)) \</xsl:if><xsl:if test="$binaryLibs!=''">
+		$(addprefix /r:$(srcdir)/, $(BINARY_LIBS)) \</xsl:if>
+		$(addprefix $(srcdir)/, $(SOURCES)) \<xsl:if test="$docFile!=''">
+		/doc:doc/<xsl:value-of select="$docFile" /> \</xsl:if><xsl:if test="$keyFile!=''">
 		/keyfile:$(srcdir)/<xsl:call-template name="substring-after-last-mod"><xsl:with-param name="input" select="$keyFile" /><xsl:with-param name="substr" select="'/'" /></xsl:call-template> \</xsl:if><xsl:if test="dnpb:Options/dnpb:AllowUnsafe/text()='true'">
 		/unsafe \</xsl:if><xsl:text disable-output-escaping="yes">
 	&amp;&amp; rm -f $(ASSEMBLY) \
@@ -389,14 +390,14 @@ CLEANFILES+=<xsl:value-of select="$outputPath"/>/$(ASSEMBLY)
 <xsl:choose>
   <xsl:when test="dnpb:Options/dnpb:KeyFile/text()!=''">
 <xsl:value-of select="@name" />_install-data-local: <xsl:value-of select="$outputPath"/>/$(ASSEMBLY)
-	echo "$(GACUTIL) /i <xsl:value-of select="$outputPath"/>/$(ASSEMBLY) /f $(GACUTIL_FLAGS)";  \
-	$(GACUTIL) /i <xsl:value-of select="$outputPath"/>/$(ASSEMBLY) /f $(GACUTIL_FLAGS) || exit 1;
+	echo "$(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS)";  \
+	$(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS) || exit 1;
 
 <xsl:value-of select="@name" />_uninstall-local:
 	if [`gacutil -l <xsl:value-of select="$projectName" /> | grep "Number" | awk -F= '{print $$2}'` -gt "0" ] ; \
 	then \
-		echo "$(GACUTIL) /u $(PROJECT_NAME) $(GACUTIL_FLAGS)"; \
-		$(GACUTIL) /u $(PROJECT_NAME) $(GACUTIL_FLAGS) || exit 1; \
+		echo "$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS)"; \
+		$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS) || exit 1; \
 	fi
   </xsl:when>
   <xsl:otherwise>
